# opentelemetry-instrumentation-boto3sqs

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  tox.ini
boto3sqs/: .gitignore
src/opentelemetry/instrumentation/boto3sqs/: __init__.py  version.py
src/tests/: test_boto3sqs_instrumentation.py
tests/: test_boto3sqs_instrumentation.py
