[tool.poetry]
name = "opentelemetry-instrumentation-boto3sqs-wrapper"
version = "0.34b0.post1"
description = "Wrapper around pre-built opentelemetry-instrumentation-boto3sqs wheel"
authors = ["Data Platform team <data-platform-team@signal-ai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
opentelemetry-instrumentation-boto3sqs = {file = "boto3sqs/dist/opentelemetry_instrumentation_boto3sqs-0.34b0.post1-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
